--- a/Makefile.in
+++ b/Makefile.in
@@ -86,10 +86,10 @@ YACC = @YACC@
 PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @NETFILTER_SRC@ @DBUS_SRC@ @NETMAP_SRC@ @RDMA_SRC@
 FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
-CSRC =	pcap.c gencode.c optimize.c nametoaddr.c \
-	etherent.c savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
-	bpf_image.c bpf_dump.c
-GENSRC = scanner.c grammar.c bpf_filter.c version.c
+CSRC =	pcap.c gencode.c optimize.c nametoaddr.c etherent.c \
+	savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
+	version.c bpf_image.c bpf_dump.c
+GENSRC = scanner.c grammar.c bpf_filter.c
 LIBOBJS = @LIBOBJS@
 
 SRC =	$(PSRC) $(FSRC) $(CSRC) $(SSRC) $(GENSRC)
@@ -169,7 +169,7 @@ TESTS_SRC = \
 	tests/selpolltest.c
 
 GENHDR = \
-	scanner.h grammar.h pcap_version.h
+	scanner.h grammar.h
 
 TAGFILES = \
 	$(SRC) $(HDR)
@@ -257,7 +257,6 @@ EXTRA_DIST = \
 	ChmodBPF/StartupParameters.plist \
 	CREDITS \
 	CMakeLists.txt \
-	GenVersion.bat \
 	INSTALL.txt \
 	LICENSE \
 	Makefile.in \
@@ -298,7 +297,6 @@ EXTRA_DIST = \
 	fad-getad.c \
 	fad-gifc.c \
 	fad-glifc.c \
-	gen_version.sh \
 	grammar.y \
 	install-sh \
 	lbl/os-aix4.h \
@@ -370,13 +368,11 @@ EXTRA_DIST = \
 	pcap-tc.h \
 	pcap-usb-linux.c \
 	pcap-usb-linux.h \
-	pcap_version.h.in \
 	rpcap-protocol.c \
 	sockutils.c \
 	sockutils.h \
 	scanner.l \
 	tests/CMakeLists.txt \
-	version.c.in \
 	Win32/Prj/wpcap.sln \
 	Win32/Prj/wpcap.vcxproj \
 	Win32/Prj/wpcap.vcxproj.filters
@@ -478,20 +474,6 @@ scanner.h: scanner.c
 scanner.o: scanner.c grammar.h
 	$(CC) $(FULL_CFLAGS) -c scanner.c
 
-pcap-bpf.o: pcap_version.h
-pcap-dag.o: pcap_version.h
-pcap-dlpi.o: pcap_version.h
-pcap-libdlpi.o: pcap_version.h
-pcap-linux.o: pcap_version.h
-pcap-nit.o: pcap_version.h
-pcap-null.o: pcap_version.h
-pcap-pf.o: pcap_version.h
-pcap-septel.o: pcap_version.h
-pcap-sita.o: pcap_version.h
-pcap-snf.o: pcap_version.h
-pcap-snit.o: pcap_version.h
-pcap-snoop.o: pcap_version.h
-
 grammar.c: $(srcdir)/grammar.y
 	$(YACC) -p pcap_ -o grammar.c -d $<
 grammar.h: grammar.c
@@ -507,27 +489,11 @@ grammar.o: grammar.c scanner.h
 gencode.o: $(srcdir)/gencode.c grammar.h scanner.h
 	$(CC) $(FULL_CFLAGS) -c $(srcdir)/gencode.c
 
-version.o: version.c
-	$(CC) $(FULL_CFLAGS) -c version.c
-
 snprintf.o: $(srcdir)/missing/snprintf.c
 	$(CC) $(FULL_CFLAGS) -o $@ -c $(srcdir)/missing/snprintf.c
 
 strtok_r.o: $(srcdir)/missing/strtok_r.c
 	$(CC) $(FULL_CFLAGS) -o $@ -c $(srcdir)/missing/strtok_r.c
-
-version.c: $(srcdir)/VERSION $(srcdir)/version.c.in $(srcdir)/gen_version.sh
-	#
-	# Older programs import this if they want to show the
-	# libpcap version number, rather than calling
-	# pcap_lib_version(), so we need to export it.
-	#
-	@rm -f $@
-	$(srcdir)/gen_version.sh $(srcdir)/VERSION $(srcdir)/version.c.in $@
-
-pcap_version.h: $(srcdir)/VERSION $(srcdir)/pcap_version.h.in $(srcdir)/gen_version.sh
-	@rm -f $@
-	$(srcdir)/gen_version.sh $(srcdir)/VERSION $(srcdir)/pcap_version.h.in $@
 
 bpf_filter.c: $(srcdir)/bpf/net/bpf_filter.c
 	rm -f bpf_filter.c
