--- a/configure.ac
+++ b/configure.ac
@@ -17,6 +17,7 @@ dnl
 AC_PREREQ(2.64)
 
 AC_INIT(pcap, m4_esyscmd_s([cat VERSION]))
+AC_CONFIG_SRCDIR(pcap.c)
 AC_SUBST(PACKAGE_NAME)
 
 AC_CANONICAL_SYSTEM
