Fix check for whether we found the DAG libraries.
A find module for XXX sets XXX_FOUND, not FOUND_XXX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1014,7 +1014,7 @@ if(NOT DISABLE_DAG)
     #
     # Did we succeed?
     #
-    if(FOUND_DAG)
+    if(DAG_FOUND)
         #
         # Yes.
         # Check for various DAG API functions.
