removed appended null's to strings in rc file
that was just a test

--- a/rpcapd.rc
+++ b/rpcapd.rc
@@ -23,8 +23,8 @@
         VALUE "Comments",         "https://github.com/the-tcpdump-group/libpcap/"
         VALUE "CompanyName",      "The TCPdump Group"
         VALUE "FileDescription",  "Remote Packet Capture Daemon"
-        VALUE "FileVersion",      "PACKAGE_VERSION_DLL\0"
-        VALUE "InternalName",     "PACKAGE_NAME\0"
+        VALUE "FileVersion",      "PACKAGE_VERSION_DLL"
+        VALUE "InternalName",     "PACKAGE_NAME"
         VALUE "LegalCopyright",   "Copyright (c) The TCPdump Group"
         VALUE "LegalTrademarks",  ""
         VALUE "OriginalFilename", "rpcapd.exe"
