crypt() isn't necessarily in libcrypt.
It's not in libcrypt in macOS, and may not be in libcrypt in other
UN*Xes.  First look for it in the system libraries, and then, only if
that fails, look for it in libcrypt.  If *that* fails, warn that we
won't be able to build rpcapd.

This means that the macOS builds with remote capturing enabled should
work; revert to requiring that they succeed.

--- a/rpcapd/CMakeLists.txt
+++ b/rpcapd/CMakeLists.txt
@@ -35,7 +35,15 @@ if(CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND)
   )
 
   if(UNIX)
-    set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} crypt)
+    check_function_exists(crypt HAVE_CRYPT)
+    if(NOT HAVE_CRYPT)
+      check_library_exists(crypt crypt "" HAVE_CRYPT)
+      if(NOT HAVE_CRYPT)
+        message(WARNING "crypt() not found. Won't be able to build rpcapd.")
+      else(HAVE_CRYPT)
+        set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} crypt)
+      endif(HAVE_CRYPT)
+    endif(NOT HAVE_CRYPT)
   endif(UNIX)
 
   target_link_libraries(rpcapd ${LIBRARY_NAME}_static ${PCAP_LINK_LIBRARIES})
