Fix if/else/endif tags.

--- a/rpcapd/CMakeLists.txt
+++ b/rpcapd/CMakeLists.txt
@@ -40,9 +40,9 @@ if(CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND)
       check_library_exists(crypt crypt "" HAVE_CRYPT)
       if(NOT HAVE_CRYPT)
         message(WARNING "crypt() not found. Won't be able to build rpcapd.")
-      else(HAVE_CRYPT)
+      else(NOT HAVE_CRYPT)
         set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} crypt)
-      endif(HAVE_CRYPT)
+      endif(NOT HAVE_CRYPT)
     endif(NOT HAVE_CRYPT)
   endif(UNIX)
 
