Use separate variables for the two tests for crypt().
check_library_exists() silently does nothing if the variable passed as
the test result variable has already been set, so we need different
variables for the two different tests.

--- a/rpcapd/CMakeLists.txt
+++ b/rpcapd/CMakeLists.txt
@@ -35,15 +35,15 @@ if(CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND)
   )
 
   if(UNIX)
-    check_function_exists(crypt HAVE_CRYPT)
-    if(NOT HAVE_CRYPT)
-      check_library_exists(crypt crypt "" HAVE_CRYPT)
-      if(NOT HAVE_CRYPT)
+    check_function_exists(crypt HAVE_CRYPT_IN_SYSTEM_LIBRARIES)
+    if(NOT HAVE_CRYPT_IN_SYSTEM_LIBRARIES)
+      check_library_exists(crypt crypt "" HAVE_CRYPT_IN_LIBCRYPT)
+      if(NOT HAVE_CRYPT_IN_LIBCRYPT)
         message(WARNING "crypt() not found. Won't be able to build rpcapd.")
-      else(NOT HAVE_CRYPT)
+      else(NOT HAVE_CRYPT_IN_LIBCRYPT)
         set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} crypt)
-      endif(NOT HAVE_CRYPT)
-    endif(NOT HAVE_CRYPT)
+      endif(NOT HAVE_CRYPT_IN_LIBCRYPT)
+    endif(NOT HAVE_CRYPT_IN_SYSTEM_LIBRARIES)
   endif(UNIX)
 
   target_link_libraries(rpcapd ${LIBRARY_NAME}_static ${PCAP_LINK_LIBRARIES})
