Add a macro to check for pthreads, and use it where necessary.
We may need pthreads for the DAG library and we may need it for rpcapd.

--- a/Makefile.in
+++ b/Makefile.in
@@ -64,6 +64,7 @@ DEPENDENCY_CFLAG = @DEPENDENCY_CFLAG@
 PROG=libpcap
 RPCAPD=@RPCAPD@
 INSTALL_RPCAPD=@INSTALL_RPCAPD@
+RPCAPD_LIBS=@RPCAPD_LIBS@
 
 # Standard CFLAGS
 FULL_CFLAGS = $(CCOPT) $(INCLS) $(DEFS) $(CFLAGS)
