Use find modules for Myricom SNF and Riverbed TurboCap.
While we're at it, speak of "Endace DAG" rather than just "DAG", as we
do for the other two.

--- a/Makefile.in
+++ b/Makefile.in
@@ -289,6 +289,8 @@ EXTRA_DIST = \
 	cmake/FindFseeko.cmake \
 	cmake/FindLFS.cmake \
 	cmake/FindPacket.cmake \
+	cmake/FindSNF.cmake \
+	cmake/FindTC.cmake \
 	cmake/have_siocglifconf.c \
 	config.guess \
 	config.h.in \
