Base the shadow-password decision on whether we have getspnam().
It appears to have the same signature and documented behavior in Linux
and Solaris, so I suspect that, if it exists on a given UN*X, it works
the same way.

We still need to handle password verification on other platforms that
don't store the encrypted password in the publicly-readable(!)
/etc/passwd or another publicly-readable form (i.e., probably just about
every UN*X on the planet, these days) but don't offer getspnam().

--- a/cmakeconfig.h.in
+++ b/cmakeconfig.h.in
@@ -36,6 +36,9 @@
 /* Define to 1 if fseeko (and presumably ftello) exists and is declared. */
 #cmakedefine HAVE_FSEEKO 1
 
+/* Define to 1 if you have the `getspnam' function. */
+#cmakedefine HAVE_GETSPNAM 1
+
 /* on HP-UX 10.20 or later */
 #cmakedefine HAVE_HPUX10_20_OR_LATER 1
 
