--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ addons:
     # Where email notification of build analysis results will be sent
     #notification_email: tcpdump-workers@lists.tcpdump.org
     # Commands to prepare for build_command
-    build_command_prepend: ./configure
+    build_command_prepend: ./configure --enable-remote
     # This command will be added as an argument to "cov-build" to compile
     # the project for analysis
     build_command: make
