Fixed wrong quote usage in rc files
The usage of quotes rc files is not very straight forward.
PACKAGE_VERSION_DLL may not be put in quotes except when used for FileVersion. There, it must be in quotes or windres will complain.
PACKAGE_NAME and PACKAGE_VERSION are already carring quotes when arriving form config.h.
So no need to put them in quotes again.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,7 +195,7 @@ if(WIN32)
 
     # Append NANO (used for Windows internal versioning) to PCAP_VERSION_PREDLL
     # 0 means unused.
-    set(PACKAGE_VERSION_DLL "${PACKAGE_VERSION_PREDLL},0")
+    set(PACKAGE_VERSION_DLL ${PACKAGE_VERSION_PREDLL},0)
 endif(WIN32)
 
 set(PACKAGE_NAME "${LIBRARY_NAME}")
