--- a/pcap-dll.rc
+++ b/pcap-dll.rc
@@ -21,12 +21,12 @@
         VALUE "CompanyName",      "The TCPdump Group"
         VALUE "FileDescription",  "System-Independent Interface for User-Level Packet Capture"
         VALUE "FileVersion",      "PACKAGE_VERSION_DLL"
-        VALUE "InternalName",     "PACKAGE_NAME"
+        VALUE "InternalName",     PACKAGE_NAME
         VALUE "LegalCopyright",   "Copyright (c) The TCPdump Group"
         VALUE "LegalTrademarks",  ""
         VALUE "OriginalFilename", "wpcap.dll"
-        VALUE "ProductName",      "PACKAGE_NAME"
-        VALUE "ProductVersion",   "PACKAGE_VERSION"
+        VALUE "ProductName",      PACKAGE_NAME
+        VALUE "ProductVersion",   PACKAGE_VERSION
       END
     END
   BLOCK "VarFileInfo"
