Install pcap-namedb.h (cmake)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1753,6 +1753,7 @@ endif(WIN32)
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/pcap/ DESTINATION include/pcap)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pcap.h DESTINATION include)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pcap-namedb.h DESTINATION include)
 
 # On UN*X, and on Windows when not using MSVC, generate pcap-config and arrange
 # that it be installed.
