Work around Linuxes with net/bpf.h differently.
Make sure net/bpf.h not only exists but defines BIOCSETIF.

This way, if some system has Linux packet sockets *and* BPF, we still
choose BPF.  Some systems might offer Linux packet sockets for
compatibility.

This also handles non-Linux systems that have net/bpf.h but don't have
BPF as a capture mechanism.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -623,6 +623,18 @@ else()
         # Check for a bunch of headers for various packet capture mechanisms.
         #
         check_include_files("sys/types.h;net/bpf.h" HAVE_NET_BPF_H)
+        if(HAVE_NET_BPF_H)
+            #
+            # Does it define BIOCSETIF?
+            # I.e., is it a header for an LBL/BSD-style capture
+            # mechanism, or is it just a header for a BPF filter
+            # engine?  Some versions of Arch Linux, for example,
+            # have a net/bpf.h that doesn't define BIOCSETIF;
+            # as it's a Linux, it should use packet sockets,
+            # instead.
+            #
+            check_symbol_exists(BIOCSETIF net/bpf.h BPF_H_DEFINES_BIOCSETIF)
+        endif(HAVE_NET_BPF_H)
         check_include_file(net/pfilt.h HAVE_NET_PFILT_H)
         check_include_file(net/enet.h HAVE_NET_ENET_H)
         check_include_file(net/nit.h HAVE_NET_NIT_H)
@@ -631,20 +643,18 @@ else()
         check_include_file(net/raw.h HAVE_NET_RAW_H)
         check_include_file(sys/dlpi.h HAVE_SYS_DLPI_H)
 
-        if(HAVE_LINUX_SOCKET_H)
-            #
-            # No prizes for guessing this one.
-            # Check this before BPF, because it appears that
-            # at least one Arch Linux system might have a net/bpf.h.
-            #
-            set(PCAP_TYPE linux)
-        elseif(HAVE_NET_BPF_H)
+        if(BPF_H_DEFINES_BIOCSETIF)
             #
             # BPF.
             # Check this before DLPI, so that we pick BPF on
             # Solaris 11 and later.
             #
             set(PCAP_TYPE bpf)
+        elseif(HAVE_LINUX_SOCKET_H)
+            #
+            # No prizes for guessing this one.
+            #
+            set(PCAP_TYPE linux)
         elseif(HAVE_NET_PFILT_H)
             #
             # DEC OSF/1, Digital UNIX, Tru64 UNIX
