Handle fopen() and fopen_s() differently.
If we have fopen_s(), define pcap_fopen as fopen_s().  Otherwise, have a
pcap_fopen() routine, which is a wrapper for fopen() and has the same
signature as fopen_s().

Use pcap_fopen() - and don't worry about "b" in the mode argument, it's
required by C90.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -551,6 +551,7 @@ set(PROJECT_SOURCE_LIST_C
     bpf_dump.c
     bpf_image.c
     etherent.c
+    fopen.c
     gencode.c
     nametoaddr.c
     optimize.c
