--- a/Makefile.in
+++ b/Makefile.in
@@ -88,7 +88,7 @@ PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @NETFILTER_SRC@ @DBUS
 FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
 CSRC =	pcap.c gencode.c optimize.c nametoaddr.c etherent.c \
-	savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
+	savefile.c sf-pcap.c sf-pcap-ng.c fopen.c pcap-common.c \
 	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c bpf_filter.c
 LIBOBJS = @LIBOBJS@
@@ -122,6 +122,7 @@ HDR = $(PUBHDR) \
 	atmuni31.h \
 	ethertype.h \
 	extract.h \
+	fopen.h \
 	ftmacros.h \
 	gencode.h \
 	ieee80211.h \
@@ -137,8 +138,8 @@ HDR = $(PUBHDR) \
 	rpcap-protocol.h \
 	rpcapd/CMakeLists.txt \
 	rpcapd/Makefile.in \
-	rpcapd/daemon.c \
 	rpcapd/daemon.h \
+	rpcapd/daemon.c \
 	rpcapd/fileconf.c \
 	rpcapd/fileconf.h \
 	rpcapd/log.h \
