--- a/rpcapd/Makefile.in
+++ b/rpcapd/Makefile.in
@@ -62,7 +62,7 @@ DYEXT = @DYEXT@
 V_RPATH_OPT = @V_RPATH_OPT@
 DEPENDENCY_CFLAG = @DEPENDENCY_CFLAG@
 PROG=libpcap
-RPCAPD_LIBS = @RPCAPD_LIBS@
+RPCAPD_LIBS = @RPCAPD_LIBS@ @PTHREAD_LIBS@
 
 # Standard CFLAGS
 FULL_CFLAGS = $(CCOPT) $(INCLS) $(DEFS) $(CFLAGS)
